# fintech-payments-data-platform

./: .dockerignore  .env.example  .gitignore  .yamllint.yml  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: __init__.py  cdc_bronze_control.py  cdc_silver_processing_pipeline.py  data_platform_backfill.py  settlement_batch_pipeline.py
airflow/include/: .gitkeep
airflow/tests/: __init__.py  test_dag_dependencies.py  test_dag_integrity.py
apps/portal-api/: Dockerfile  pyproject.toml
apps/portal-api/app/portal_api/: __init__.py  main.py
apps/portal-api/app/portal_api/adapters/: __init__.py  models.py  registry.py
apps/portal-api/app/portal_api/api/: __init__.py  health.py
apps/portal-api/app/portal_api/api/v1/: __init__.py  system.py
apps/portal-api/app/portal_api/core/: __init__.py  config.py  correlation.py  errors.py  logging.py  middleware.py  security.py
apps/portal-api/app/portal_api/health/: __init__.py  models.py  service.py
apps/portal-api/app/portal_api/telemetry/: __init__.py  metrics.py
apps/portal-api/scripts/: generate_openapi.py  validate_config.py
apps/portal-api/tests/: conftest.py
apps/portal-api/tests/integration/: test_api.py
apps/portal-api/tests/unit/: test_config.py  test_correlation.py  test_health_service.py  test_logging.py  test_openapi.py
apps/portal-web/: Dockerfile  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  proxy.ts  tsconfig.json  vitest.config.ts
apps/portal-web/api/: config.ts  portal-api.ts  problem.ts  query-keys.ts
apps/portal-web/app/: global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
apps/portal-web/components/: app-shell.tsx  problem-alert.tsx  status-badge.tsx
apps/portal-web/telemetry/: browser-observer.tsx  events.ts
apps/portal-web/tests/: api-overview.test.tsx  development-route.test.ts  foundation-shell.test.tsx  problem-details.test.tsx  query-policy.test.ts  setup.ts  system-status.test.tsx  test-utils.tsx
contracts/batch/: .gitkeep  settlement_v1.yml
contracts/events/: .gitkeep
dashboards/executive/: .gitkeep
dashboards/finance/: .gitkeep
dashboards/operations/: .gitkeep
dbt/: dbt_project.yml  profiles.example.yml
dbt/macros/: .gitkeep
dbt/models/marts/: .gitkeep
dbt/models/staging/: .gitkeep
dbt/seeds/: .gitkeep
dbt/snapshots/: .gitkeep
dbt/tests/: .gitkeep
docs/: roadmap.md
docs/adr/: .gitkeep
docs/architecture/: cdc-architecture.md  cdc-bronze-ingestion.md  control-plane.md  current-state.md  orchestration.md  silver-processing.md  storage-abstraction.md  target-architecture.md
docs/business/: business-case.md  kpis.md  requirements.md
docs/data-model/: cdc-bronze-schema.md  cdc-event-contract.md  control-schema.md  dimensional-model.md  oltp-schema.md  settlement-contract.md  silver-data-model.md  silver-quality-rules.md  source-model.md
docs/demo/: demo-checklist.md  demo-guide.md  demo-script.md
docs/portal/: api-contract.md  architecture-boundaries.md  configuration.md  local-development.md  testing.md  troubleshooting.md
docs/runbooks/: .gitkeep  airflow-local.md  backfill.md  cdc-consumer.md  cdc-recovery.md  local-kafka-debezium.md  local-minio.md  local-postgres.md  orchestration-recovery.md  pipeline-operations.md  settlement-batch-ingestion.md  silver-processing.md  silver-recovery.md
infrastructure/airflow/: .gitkeep  Dockerfile
infrastructure/airflow/init/: 001_create_control_schema.sql
infrastructure/cdc-consumer/: Dockerfile
infrastructure/debezium/: connector-init.Dockerfile
infrastructure/debezium/connectors/: payments-postgres.json
infrastructure/kafka/: .gitkeep
infrastructure/minio/: .gitkeep
infrastructure/monitoring/: .gitkeep
infrastructure/postgres/: Dockerfile
infrastructure/postgres/init/: .gitkeep  001_create_database_objects.sql  002_create_reference_data.sql  003_create_indexes.sql
infrastructure/snowflake/: .gitkeep
scripts/: .gitkeep
scripts/airflow/: __init__.py  bootstrap_control.py
scripts/cdc/: __init__.py  bootstrap_postgres.py  connector_status.py  delete_connector.py  inspect_topic.py  register_connector.py
src/: __init__.py
src/common/: __init__.py  config.py  database.py  logging.py  project.py  storage.py
src/generators/: __init__.py  cli.py  models.py  payments_generator.py  repositories.py
src/ingestion/: __init__.py
src/ingestion/batch/: __init__.py  cli.py  contracts.py  discovery.py  fixtures.py  manifest.py  models.py  settlement_ingestor.py  storage.py  storage_factory.py  validation.py
src/ingestion/cdc/: __init__.py  config.py  connect_api.py  envelope.py  inspection.py  postgres.py
src/ingestion/cdc_consumer/: __init__.py  batching.py  cli.py  config.py  consumer.py  dlq.py  envelope.py  inspection.py  manifest.py  models.py  parquet.py  recovery.py  retry.py  storage.py
src/ingestion/streaming/: __init__.py
src/observability/: __init__.py
src/orchestration/: __init__.py  callbacks.py  config.py  control.py  health.py  models.py  quality.py  tasks.py
src/processing/: __init__.py
src/processing/silver/: __init__.py  bronze_reader.py  cdc_normalizer.py  cli.py  config.py  deduplication.py  discovery.py  inspection.py  manifest.py  models.py  parquet.py  processor.py  quality.py  references.py  schemas.py  settlement_normalizer.py  storage.py
src/quality/: __init__.py
tests/: __init__.py
tests/end_to_end/: __init__.py
tests/integration/: __init__.py  conftest.py  test_generator_persistence.py  test_postgres_schema.py
tests/integration/airflow/: __init__.py  conftest.py  test_control_plane.py  test_orchestration_tasks.py
tests/integration/batch/: __init__.py  test_settlement_ingestion.py
tests/integration/cdc/: __init__.py  conftest.py  test_postgres_cdc.py
tests/integration/minio/: __init__.py  (+1 more)
tests/unit/: __init__.py  test_project_foundation.py
(+70 files in other folders)
